# agent-discovery

./: .env.example  .gitignore  .stream-env.example  CLAUDE.md  Cargo.toml  README.md  install-service.sh  install-stream-service.sh  push-secrets.sh  run_agent.sh  setup-pi-audio.sh  start-agent.sh  test-pi-audio.sh  test-pi-cpal.sh  test-pi-mic.sh  update-pi-remote.sh  update-pi.sh
docs/: agent-purpose-notes.md  streaming-pi-setup.md
src/: agent.rs  config.rs  directives.rs  lib.rs  main.rs
src/audio/: chirp.rs  demodulator.rs  device.rs  dtmf.rs  mod.rs  modulator.rs
src/comms/: channel.rs  handshake.rs  mod.rs  tcp.rs
src/discovery/: manager.rs  peer.rs
src/mcp/: client.rs
src/negotiation/: claude.rs
src/obp/: client.rs  entities.rs  exploration.rs  mod.rs
src/protocol/: codec.rs  frame.rs  message.rs  mod.rs
src/system_commands/: mod.rs  stream.rs  watchdog.rs  wifi.rs
status/: 2026-02-19.md
tests/: integration.rs
tests/integration/: discovery_two_agents.rs  frame_roundtrip.rs  fsk_roundtrip.rs
untracked_files/: interesting.md
